Refactor: Remove debugging functions from functions.php
Build: Update gulpfile.js for improved deployment process and add dry-run functionality

Update: Modify webentwicklerin.pot for new translation strings and update creation date

Dependencies: Add rsync as a dependency in package.json and package-lock.json

Style: Adjust form element styles in SCSS for consistency

Meta: Update theme version and tested up to version in style.css

Cleanup: Remove debugging.php file and add .deploy-hashes.json for deployment tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,77 @@
-/node_modules
+# Ignore files with 'copy' in the filename
+*copy*
+*Copy*
+*COPY*
+
+# Dependencies
+node_modules/
+vendor/
+bower_components/
+
+# Environment and config
+.env
+.env.*
+wp-config.php
+*.config.js
+
+# IDE and Editor files
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+.phpstorm.meta.php
+*.code-workspace
+
+# System files
+.DS_Store
+Thumbs.db
+desktop.ini
+*.log
+.Spotlight-V100
+.Trashes
+
+# Build and compiled files
+dist/
+build/
+*.min.css
+*.min.js
+.sass-cache/
+*.css.map
+*.js.map
+
+# Temporary and backup files
+*~
+*.bak
+*.swp
+*.swo
+.tmp/
+tmp/
+temp/
+
+# Package manager files
+yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+package-lock.json
+composer.lock
+
+# Testing and coverage
+coverage/
+.nyc_output/
+__tests__/
+test-results/
+
+# WordPress specific
+wp-content/uploads/
+wp-content/upgrade/
+wp-content/backup*/
+wp-content/cache/
+wp-content/debug.log
+
+# Misc
+*.zip
+*.tar.gz
+*.rar
+.htaccess
+sitemap.xml
+sitemap.xml.gz
