--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "sass": "^1.66.1",
     "stylelint": "^14.16.1",
     "vinyl-ftp": "^0.6.1"
+  },
+  "dependencies": {
+    "rsync": "^0.6.1"
   }
 }
