Enhancement: Update theme structure and functionality
- Updated .babelrc to include WordPress preset configuration.
- Modified .gitignore to include gulpfile.js and sitemap.xml.gz.
- Refactored functions.php to include new icon generation and block registration functionalities.
- Improved SVG handling with sanitization and validation in filters.php.
- Updated package.json and package-lock.json for new dependencies and versioning.
- Enhanced gulpfile.js with new tasks for building blocks and generating icons.
- Updated theme.json and style.css for compatibility with WordPress 6.5 and PHP 8.0.
- Removed unused SVG files and deprecated styles.
- Cleaned up SCSS files for better organization and readability.

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
 	"presets": [
-		"@wordpress/babel-preset-default"
+		[
+			"@wordpress/babel-preset-default",
+			{
+				"wordpress": true
+			}
+		]
 	]
 }
