--- a/package.json
+++ b/package.json
@@ -1,40 +1,52 @@
 {
-  "name": "webentwicklerin",
-  "version": "1.0.0",
-  "description": "luna yoga block theme",
-  "author": "webentwicklerin",
-  "license": "GPL-2.0-or-later",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@wordpress/babel-preset-default": "^7.10.0",
-    "@wordpress/eslint-plugin": "^13.10.0",
-    "@wordpress/stylelint-config": "^21.9.0",
-    "cssnano": "^6.0.1",
-    "eslint": "^8.33.0",
-    "fancy-log": "^2.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-sass-unicode": "^1.0.5",
-    "gulp-wp-pot": "^2.5.0",
-    "postcss": "^8.4.29",
-    "postcss-cli": "^10.1.0",
-    "prettier": "^2.8.3",
-    "sass": "^1.66.1",
-    "stylelint": "^14.16.1",
-    "vinyl-ftp": "^0.6.1"
-  },
-  "dependencies": {
-    "rsync": "^0.6.1"
-  }
+	"name": "webentwicklerin",
+	"version": "2.0.0",
+	"description": "Modern WordPress Block Theme",
+	"author": "webentwicklerin",
+	"license": "GPL-2.0-or-later",
+	"main": "gulpfile.js",
+	"scripts": {
+		"build": "gulp build",
+		"build:blocks": "wp-scripts build --webpack-copy-php",
+		"watch": "gulp watch",
+		"watch:blocks": "wp-scripts start",
+		"icons": "gulp generate-icons",
+		"dev": "npm run watch"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.12",
+		"@wordpress/babel-preset-default": "^7.10.0",
+		"@wordpress/block-editor": "^13.0.0",
+		"@wordpress/blocks": "^13.0.0",
+		"@wordpress/components": "^28.0.0",
+		"@wordpress/element": "^6.0.0",
+		"@wordpress/eslint-plugin": "^13.10.0",
+		"@wordpress/i18n": "^5.0.0",
+		"@wordpress/scripts": "^27.0.0",
+		"@wordpress/stylelint-config": "^21.9.0",
+		"cssnano": "^6.0.1",
+		"eslint": "^8.33.0",
+		"fancy-log": "^2.0.0",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^8.0.0",
+		"gulp-babel": "^8.0.0",
+		"gulp-clean": "^0.4.0",
+		"gulp-clean-css": "^4.3.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-cssnano": "^2.1.3",
+		"gulp-postcss": "^9.0.1",
+		"gulp-rename": "^2.0.0",
+		"gulp-sass": "^5.1.0",
+		"gulp-sass-unicode": "^1.0.5",
+		"gulp-wp-pot": "^2.5.0",
+		"postcss": "^8.4.29",
+		"postcss-cli": "^10.1.0",
+		"prettier": "^2.8.3",
+		"sass": "^1.66.1",
+		"stylelint": "^14.16.1",
+		"vinyl-ftp": "^0.6.1"
+	},
+	"dependencies": {
+		"rsync": "^0.6.1"
+	}
 }
