Enhancement: Update theme configuration and build process
- Added gulpfile.local.js to manage local deployment configurations.
- Updated functions.php to include theme update checker functionality.
- Refactored gulpfile.js to streamline Sass compilation and improve task organization.
- Adjusted package.json to reflect new versioning and added release scripts.
- Updated .gitignore to include local configuration files and ensure proper file management.
- Modified webentwicklerin.pot for new translation strings and updated creation date.

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ yarn-debug.log*
 package-lock.json
 composer.lock
 
+# Local configuration files
+gulpfile.local.js
+
 # Testing and coverage
 coverage/
 .nyc_output/
@@ -75,6 +78,3 @@ wp-content/debug.log
 .htaccess
 sitemap.xml
 sitemap.xml.gz
-
-# New line for gulpfile.js
-gulpfile.js
