--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,12 @@ jobs:
           git fetch --depth=1 origin ${GITHUB_REF}
           git checkout FETCH_HEAD
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.3"
+          tools: composer
+
       - name: Install dependencies
         run: npm install
 
@@ -36,7 +42,8 @@ jobs:
       - name: Create release ZIP
         run: |
           mkdir -p release
-          cp -r assets inc languages parts patterns templates README.md CHANGELOG.md screenshot.png style.css functions.php index.php theme.json release/
+          cp -r assets inc languages parts patterns templates release/
+          cp README.md CHANGELOG.md screenshot.png style.css functions.php index.php theme.json release/
           cd release
           zip -r ../webentwicklerin.zip .
           cd ..
